third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/move_full_invalid.no-opt.exp

Diagnostics:
error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:13:9
   │
12 │         let f = &x;
   │                 -- previous local borrow
13 │         move x;
   │         ^^^^^^ moved here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:18:9
   │
17 │         let f = &mut x;
   │                 ------ previous mutable local borrow
18 │         move x;
   │         ^^^^^^ moved here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:23:9
   │
22 │         let f = id(&x);
   │                 ------
   │                 │  │
   │                 │  previous local borrow
   │                 used by call result
23 │         move x;
   │         ^^^^^^ moved here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:28:9
   │
27 │         let f = id_mut(&mut x);
   │                 --------------
   │                 │      │
   │                 │      previous mutable local borrow
   │                 used by mutable call result
28 │         move x;
   │         ^^^^^^ moved here
29 │         *f;
   │         -- conflicting reference `f` used here
